fix to avoid zoom in when typing on mobile
if font-size is less than 16px for inputs, when the element gets focus, iOS will automatically zoom in the page

--- a/src/app/_global.scss
+++ b/src/app/_global.scss
@@ -145,3 +145,25 @@ button{
         }
     }
 }
+
+// fix to avoid zoom in when typing on mobile
+@media (max-width: 880px) {
+    input[type="color"],
+    input[type="date"],
+    input[type="datetime"],
+    input[type="datetime-local"],
+    input[type="email"],
+    input[type="month"],
+    input[type="number"],
+    input[type="password"],
+    input[type="search"],
+    input[type="tel"],
+    input[type="text"],
+    input[type="time"],
+    input[type="url"],
+    input[type="week"],
+    select:focus,
+    textarea {
+        font-size: 16px;
+    }
+}
